# soaringspot-igc-downloader

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: date_utils.rs  main.rs  parser.rs  url_utils.rs
src/snapshots/: soaringspot_igc_downloader__parser__tests__parse_daily_results.snap  soaringspot_igc_downloader__parser__tests__parse_igc_files_snapshot.snap
tests/fixtures/: day.html  results.html
